# PlausiDen-Android

./: .gitignore  CLAUDE.md  LICENSE  README.md  build.gradle.kts  gradle.properties  justfile  settings.gradle.kts
.github/workflows/: ci.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/kotlin/com/plausiden/app/: BootReceiver.kt  MainActivity.kt  NativeBridge.kt  NotificationHelper.kt  PlausiDenApp.kt  PollutionService.kt  ProfileManager.kt  ScheduleWorker.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
docs/: ANDROID_AUDIT.md
engine-jni/: Cargo.toml
engine-jni/src/: lib.rs
scripts/: android-lint.sh  build-rust.sh  install-debug.sh
